--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<meta name="author" content="dennykharyan">
 
 		<!-- Favicon -->
-		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+		<link rel="shortcut icon" href="img/icons/favicon.ico" type="image/x-icon" />
+		<link rel="apple-touch-icon" href="img/icons/apple-touch-icon.png">
 
 		<!-- Mobile Metas -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
@@ -76,7 +76,7 @@
 													<span class="ps-0 font-weight-semibold text-color-default text-2-5">Jl. Lombok RT.002/RW.010 No.17 Jombang, Ciputat, Tangerang Selatan, Banten 15414</span>
 												</li> -->
 												<li class="nav-item py-2 pe-2">
-													<a href="tel:123-456-7890" class="text-color-default text-2-5 text-color-hover-primary font-weight-semibold">0896-0518-9466</a>
+													<a href="tel:123-456-7890" class="text-color-default text-2-5 text-color-hover-primary font-weight-semibold">+62896-0518-9466</a>
 												</li>
 												<li class="nav-item py-2 d-none d-md-inline-flex">
 													<a href="mailto:mail@domain.com" class="text-color-default text-2-5 text-color-hover-primary font-weight-semibold">widyaningrumdyah78@yahoo.com</a>
@@ -114,7 +114,7 @@
 								<div class="header-row">
 									<div class="header-logo">
 										<a href="index.html">
-											<img alt="Porto" width="123" height="32" src="img/demos/business-consulting-4/logo.png">
+											<img alt="Porto" width="84" height="84" src="img/demos/business-consulting-4/DIAH.png"> NINGRUM PASSPORT
 										</a>
 									</div>
 								</div>
@@ -148,7 +148,7 @@
 												</ul>
 											</nav>
 										</div>
-										<a href="demo-business-consulting-4-contact-us.html" class="btn btn-modern btn-primary btn-outline btn-arrow-effect-1 text-capitalize text-2-5 ms-3 me-2 d-block d-md-none d-xl-block anim-hover-translate-right-5px transition-2ms">Contact Us <i class="fas fa-arrow-right ms-2"></i></a>
+										<a href="demo-business-consulting-4-contact-us.html" class="btn btn-modern btn-primary btn-outline btn-arrow-effect-1 text-capitalize text-2-5 ms-3 me-2 d-block d-md-none d-xl-block anim-hover-translate-right-5px transition-2ms">Hubungi Kami <i class="fas fa-arrow-right ms-2"></i></a>
 										<button class="btn header-btn-collapse-nav" data-bs-toggle="collapse" data-bs-target=".header-nav-main nav">
 											<i class="fas fa-bars"></i>
 										</button>
@@ -288,9 +288,9 @@
 									<hr class="bg-primary border-radius m-auto">
 								</div>
 								<div class="overflow-hidden mb-1">
-									<h3 class="font-weight-semi-bold text-color-grey text-uppercase positive-ls-3 text-4 line-height-2 line-height-sm-7 mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="100">Visi & Misi</h3>
+									<h3 class="font-weight-semi-bold text-color-grey text-uppercase positive-ls-3 text-4 line-height-2 line-height-sm-7 mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="100">Tentang Kami</h3>
 								</div>
-								<h2 class="text-color-dark font-weight-bold text-8 pb-2 mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">We are committed to providing our clients the best<br>strategic guidance available</h2>
+								<h2 class="text-color-dark font-weight-bold text-8 pb-2 mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">Kami berkomitmen memberikan layanan terbaik<br>dengan segala kemudahan yang ada</h2>
 
 							</div>
 						</div>
@@ -312,18 +312,18 @@
 							</div>
 							<div class="col-lg-6 pt-5 mt-5 pt-lg-0 mt-lg-0">
 								<div class="appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="300">
-									<p class="font-weight-medium text-4-5 line-height-5">Cras a elit sit amet leo accumsan volutpat. Suspendisse hendrerit vehicula leo, vel efficitur felis ultrices non. Integer aliquet ullamcorper dolor, quis sollicitudin.</p>
-									<p class="text-3-5">Cras a elit sit amet leo accumsan volutpat. Suspendisse hendrerit vehicula leo, vel efficitur felis ultrices non. Integer aliquet.</p>
+									<p class="font-weight-medium text-4-5 line-height-5">Dengan pengalaman lebih dari 10 tahun dan pengalaman dengan ribuan pelanggan yang merasa puas.</p>
+									<p class="text-3-5">Kami berkomitmen dan memegang prinsip demi menjaga kualitas pelayanan Kami.</p>
 
 									<ul class="list list-icons list-icons-style-2 list-icons-lg">
 										<li class="line-height-9 text-3-5 mb-1">
-											<i class="fas fa-check border-width-2 text-3"></i>Amet orci quis arcu vestibulum vestibulum.
+											<i class="fas fa-check border-width-2 text-3"></i>Memberikan Anda pengalaman terbaik dan ternyaman dalam pengurusan dokumen kenegaraan.
 										</li>
 										<li class="line-height-9 text-3-5 mb-1">
-											<i class="fas fa-check border-width-2 text-3"></i>Quis arcu vestibulum vestibulum.
+											<i class="fas fa-check border-width-2 text-3"></i>Kepercayaan dan kenyamanan Anda adalah prioritas Kami.
 										</li>
 										<li class="line-height-9 text-3-5 mb-1">
-											<i class="fas fa-check border-width-2 text-3"></i>Sit amet orci quis arcu.
+											<i class="fas fa-check border-width-2 text-3"></i>Memberikan layanan 7x24 jam dalam pengurusan dokumen kenegaraan Anda.
 										</li>
 									</ul>
 								</div>
@@ -347,9 +347,9 @@
 								<div class="overflow-hidden mb-1">
 									<h3 class="font-weight-semi-bold text-color-grey text-uppercase positive-ls-3 text-4 line-height-2 line-height-sm-7 mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="100">Bagaimana Kami Bisa Membantu Anda</h3>
 								</div>
-								<h2 class="text-color-dark font-weight-bold text-8 pb-4 mb-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">Our Amazing Services</h2>
+								<h2 class="text-color-dark font-weight-bold text-8 pb-4 mb-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">Layanan Terbaik Kami</h2>
 
-								<p class="font-weight-medium text-4-5 line-height-5 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">Cras a elit sit amet leo accumsan volutpat. Suspendisse hendrerit vehicula leo, vel efficitur felis ultrices non.</p>
+								<p class="font-weight-medium text-4-5 line-height-5 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">Dengan semua pengalaman yang Kami miliki, Kami dapat membantu Anda dalam pengurusan dokumen kenegaraan.</p>
 
 							</div>
 						</div>
@@ -425,26 +425,26 @@
 								<div class="overflow-hidden mb-1">
 									<h3 class="font-weight-semi-bold text-color-grey text-uppercase positive-ls-3 text-4 line-height-2 line-height-sm-7 mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="100">Status Usaha</h3>
 								</div>
-								<h2 class="text-color-light font-weight-bold text-8 pb-4 mb-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">Learn More About Us In Numbers</h2>
+								<h2 class="text-color-light font-weight-bold text-8 pb-4 mb-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">Mengenal lebih dalam tentang Kami dalam uraian angka</h2>
 							</div>
 						</div>
 						<div class="row pt-4 pb-3 counters text-light appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="300">
 							<div class="col-lg-4 mb-4 mb-lg-0">
 								<div class="counter">
-									<strong data-to="500" data-append="+">0</strong>
-									<label class="font-weight-semibold text-4 opacity-7">Cases Completed</label>
+									<strong data-to="1200" data-append="+">0</strong>
+									<label class="font-weight-semibold text-4 opacity-7">Dokumen yang Kami bantu</label>
 								</div>
 							</div>
 							<div class="col-lg-4 mb-4 mb-lg-0">
 								<div class="counter">
-									<strong data-to="100" data-append="+">0</strong>
-									<label class="font-weight-semibold text-4 opacity-7">Total Consultants</label>
+									<strong data-to="10" data-append="+">0</strong>
+									<label class="font-weight-semibold text-4 opacity-7">Tahun pengalaman</label>
 								</div>
 							</div>
 							<div class="col-lg-4 mb-4 mb-sm-0">
 								<div class="counter">
 									<strong data-to="100" data-append="%">0</strong>
-									<label class="font-weight-semibold text-4 opacity-7">Satisfied Customers</label>
+									<label class="font-weight-semibold text-4 opacity-7">Client puas</label>
 								</div>
 							</div>
 						</div>
@@ -520,7 +520,8 @@
 
 					</div>
 				</section>
-				<section class="section border-0 bg-light m-0">
+
+				<!-- <section class="section border-0 bg-light m-0">
 					<div class="container py-5">
 						<div class="row align-items-center text-center">
 							<div class="col-sm-4 col-lg-2 mb-5 mb-lg-0">
@@ -543,7 +544,7 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</section> -->
 
 				<section class="parallax section section-text-light section-parallax bg-primary m-0" data-plugin-parallax data-plugin-options="{'speed': 1.5}" data-image-src="img/demos/business-consulting-4/parallax/parallax-1.jpg">
 					<div class="container py-5">
@@ -554,11 +555,11 @@
 										<i class="icons icon-phone text-6 text-color-light"></i>
 									</div>
 									<div class="feature-box-info line-height-2 ps-1">
-										<span class="d-block text-1 text-light font-weight-semibold text-color-default ws-nowrap">CALL US NOW</span>
-										<strong class="text-4-5"><a href="tel:+1234567890" class="text-color-light text-decoration-none ws-nowrap">+123 4567 890</a></strong>
+										<span class="d-block text-1 text-light font-weight-semibold text-color-default ws-nowrap">Hubungi Kami sekarang</span>
+										<strong class="text-4-5"><a href="tel:+1234567890" class="text-color-light text-decoration-none ws-nowrap">+62896 0518 9466</a></strong>
 									</div>
 								</div>
-								<h2 class="text-color-light font-weight-bold text-8 pb-4 mb-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">Best Consultants Downtown Los Angeles CA</h2>
+								<h2 class="text-color-light font-weight-bold text-8 pb-4 mb-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">Biro Jasa terbaik di bidangnya</h2>
 							</div>
 						</div>
 						<div class="row justify-content-center">
@@ -567,20 +568,20 @@
 
 									<div class="row align-items-center">
 										<div class="col-12 mb-3 mb-lg-0 col-lg">
-											<h2 class="text-color-light font-weight-bold text-5 mb-0">Request a Call Back</h2>
+											<h2 class="text-color-light font-weight-bold text-5 mb-0">Minta Kami untuk mengubungi Anda kembali</h2>
 										</div>
 										<div class="col-12 mb-3 mb-lg-0 col-lg">
-											<input type="text" class="form-control text-3 h-auto py-3 line-height-1 border-0" placeholder="Subject" aria-label="Subject">
+											<input type="text" class="form-control text-3 h-auto py-3 line-height-1 border-0" placeholder="Pesan" aria-label="Pesan">
 										</div>
 										<div class="col-12 mb-3 mb-lg-0 col-lg">
-											<input type="text" class="form-control text-3 h-auto py-3 line-height-1 border-0" placeholder="Full Name" aria-label="Full Name">
+											<input type="text" class="form-control text-3 h-auto py-3 line-height-1 border-0" placeholder="Nama Lengkap" aria-label="Nama Lengkap">
 										</div>
 										<div class="col-12 mb-3 mb-lg-0 col-lg">
-											<input type="text" class="form-control text-3 h-auto py-3 line-height-1 border-0" placeholder="Phone Number" aria-label="Phone Number">
+											<input type="text" class="form-control text-3 h-auto py-3 line-height-1 border-0" placeholder="Nomer Telepon" aria-label="Nomor Telepon">
 										</div>
 										<div class="col-12 mb-3 mb-lg-0 col-lg">
 											<div class="d-grid gap-2">
-												<a href="#" class="btn btn-modern btn-dark btn-arrow-effect-1 text-capitalize text-2-5 px-5 py-3 anim-hover-translate-top-5px transition-2ms">Submit <i class="fas fa-arrow-right ms-2"></i></a>
+												<a href="#" class="btn btn-modern btn-dark btn-arrow-effect-1 text-capitalize text-2-5 px-5 py-3 anim-hover-translate-top-5px transition-2ms">Kirim <i class="fas fa-arrow-right ms-2"></i></a>
 											</div>
 										</div>
 									</div>
@@ -598,7 +599,7 @@
 					<div class="container py-3">
 						<div class="row align-items-center">
 							<div class="col-md-4 mb-4 mb-md-0 appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="100">
-								<h2 class="text-color-dark font-weight-bold text-5 mb-0">New York</h2>
+								<!-- <h2 class="text-color-dark font-weight-bold text-5 mb-0">New York</h2>
 
 								<ul class="list list-icons list-icons-style-2 list-icons-lg">
 									<li class="text-3 font-weight-medium mb-1 line-height-5 mb-2">
@@ -610,10 +611,10 @@
 									<li class="text-3 font-weight-medium mb-1 line-height-5">
 										<i class="icon-envelope icons border-width-2 text-3"></i><a href="mailto:mail@domain.com" class="p-relative top-5">mail@domain.com</a>
 									</li>
-								</ul>
+								</ul> -->
 							</div>
 							<div class="col-md-4 mb-4 mb-md-0 appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="500">
-								<h2 class="text-color-dark font-weight-bold text-5 mb-0">Chicago</h2>
+								<!-- <h2 class="text-color-dark font-weight-bold text-5 mb-0">Chicago</h2>
 
 								<ul class="list list-icons list-icons-style-2 list-icons-lg">
 									<li class="text-3 font-weight-medium mb-1 line-height-5 mb-2">
@@ -625,20 +626,20 @@
 									<li class="text-3 font-weight-medium mb-1 line-height-5">
 										<i class="icon-envelope icons border-width-2 text-3"></i><a href="mailto:mail@domain.com" class="p-relative top-5">mail@domain.com</a>
 									</li>
-								</ul>
+								</ul> -->
 							</div>
 							<div class="col-md-4 appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="900">
-								<h2 class="text-color-dark font-weight-bold text-5 mb-0">Louisville</h2>
+								<h2 class="text-color-dark font-weight-bold text-5 mb-0">Tangerang Selatan</h2>
 
 								<ul class="list list-icons list-icons-style-2 list-icons-lg">
 									<li class="text-3 font-weight-medium mb-1 line-height-5 mb-2">
-										<i class="icon-location-pin icons border-width-2 text-3"></i>123 Street Name, City, 191919<br>New York - NY
+										<i class="icon-location-pin icons border-width-2 text-3"></i>Jalan Lombok RT 002/010 No. 17<br>Jombang - Ciputat
 									</li>
 									<li class="text-3 font-weight-medium mb-1 line-height-5 mb-2">
-										<i class="icon-phone icons border-width-2 text-3"></i>800 123-45679<br>800 123-45678
+										<i class="icon-phone icons border-width-2 text-3"></i>0896 0518 9466
 									</li>
 									<li class="text-3 font-weight-medium mb-1 line-height-5">
-										<i class="icon-envelope icons border-width-2 text-3"></i><a href="mailto:mail@domain.com" class="p-relative top-5">mail@domain.com</a>
+										<i class="icon-envelope icons border-width-2 text-3"></i><a href="mailto:mail@domain.com" class="p-relative top-5">widyaningrumdyah78@yahoo.com</a>
 									</li>
 								</ul>
 							</div>
